--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -543,8 +543,9 @@ PE7.Signal=UART7_RX
 PE8.Locked=true
 PE8.Mode=Asynchronous
 PE8.Signal=UART7_TX
-PE9.GPIOParameters=GPIO_Label
+PE9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PE9.GPIO_Label=PHY_IRQ
+PE9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PE9.Locked=true
 PE9.Signal=GPXTI9
 PF0.Locked=true
