--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -274,6 +274,10 @@ NETXDUO.ETH_ON=1
 NETXDUO.IPParameters=ETH_ON
 NVIC.BusFault_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
 NVIC.DebugMonitor_IRQn=true\:0\:0\:false\:false\:true\:false\:false\:false\:false
+NVIC.EXTI11_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true\:true
+NVIC.EXTI2_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true\:true
+NVIC.EXTI8_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true\:true
+NVIC.EXTI9_IRQn=true\:0\:0\:false\:false\:true\:false\:true\:true\:true
 NVIC.ForceEnableDMAVector=true
 NVIC.GPDMA1_Channel4_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true\:true
 NVIC.GPDMA1_Channel5_IRQn=true\:0\:0\:false\:false\:true\:true\:false\:true\:true
@@ -519,9 +523,18 @@ PE12.Locked=true
 PE13.Locked=true
 PE14.Locked=true
 PE15.Locked=true
+PE2.GPIOParameters=GPIO_Label
+PE2.GPIO_Label=USER_BUTTON
 PE2.Locked=true
+PE2.Signal=GPXTI2
+PE3.GPIOParameters=GPIO_Label
+PE3.GPIO_Label=RED_LED
 PE3.Locked=true
+PE3.Signal=GPIO_Output
+PE4.GPIOParameters=GPIO_Label
+PE4.GPIO_Label=GREEN_LED
 PE4.Locked=true
+PE4.Signal=GPIO_Output
 PE5.Locked=true
 PE6.Locked=true
 PE7.Locked=true
@@ -530,8 +543,9 @@ PE7.Signal=UART7_RX
 PE8.Locked=true
 PE8.Mode=Asynchronous
 PE8.Signal=UART7_TX
-PE9.GPIOParameters=GPIO_Label
+PE9.GPIOParameters=GPIO_Label,GPIO_ModeDefaultEXTI
 PE9.GPIO_Label=PHY_IRQ
+PE9.GPIO_ModeDefaultEXTI=GPIO_MODE_IT_FALLING
 PE9.Locked=true
 PE9.Signal=GPXTI9
 PF0.Locked=true
@@ -795,6 +809,8 @@ SH.ADCx_INP9.1=ADC2_INP9,IN9-Single-Ended
 SH.ADCx_INP9.ConfNb=2
 SH.GPXTI11.0=GPIO_EXTI11
 SH.GPXTI11.ConfNb=1
+SH.GPXTI2.0=GPIO_EXTI2
+SH.GPXTI2.ConfNb=1
 SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
