--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -88,10 +88,13 @@ CAD.provider=
 CORTEX_M33_NS.userName=CORTEX_M33
 ETH.IPParameters=MediaInterface
 ETH.MediaInterface=HAL_ETH_RMII_MODE
-FDCAN2.CalculateBaudRateNominal=888888
-FDCAN2.CalculateTimeBitNominal=1125
-FDCAN2.CalculateTimeQuantumNominal=375.0
-FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal
+FDCAN2.CalculateBaudRateNominal=500000
+FDCAN2.CalculateTimeBitNominal=2000
+FDCAN2.CalculateTimeQuantumNominal=200.0
+FDCAN2.IPParameters=CalculateTimeQuantumNominal,CalculateTimeBitNominal,CalculateBaudRateNominal,NominalPrescaler,NominalTimeSeg1,NominalTimeSeg2
+FDCAN2.NominalPrescaler=5
+FDCAN2.NominalTimeSeg1=1
+FDCAN2.NominalTimeSeg2=8
 File.Version=6
 GPDMA1.CIRCULARMODE_GPDMACH4=ENABLE
 GPDMA1.CIRCULARMODE_GPDMACH5=ENABLE
@@ -108,7 +111,7 @@ GPDMA1.SRCDATAWIDTH_GPDMACH4=DMA_SRC_DATAWIDTH_HALFWORD
 GPDMA1.SRCDATAWIDTH_GPDMACH5=DMA_SRC_DATAWIDTH_HALFWORD
 GPIO.groupedBy=Group By Peripherals
 I2C2.IPParameters=Timing
-I2C2.Timing=0x00707CBB
+I2C2.Timing=0x60606293
 KeepUserPlacement=false
 MMTAppRegionsCount=0
 MMTConfigApplied=false
@@ -117,25 +120,26 @@ Mcu.ContextProject=TrustZoneDisabled
 Mcu.Family=STM32H5
 Mcu.IP0=ADC1
 Mcu.IP1=ADC2
-Mcu.IP10=LPUART1
-Mcu.IP11=MEMORYMAP
-Mcu.IP12=NETXDUO
-Mcu.IP13=NVIC
-Mcu.IP14=PWR
-Mcu.IP15=RCC
-Mcu.IP16=SPI2
-Mcu.IP17=SYS
-Mcu.IP18=THREADX
-Mcu.IP19=UART7
+Mcu.IP10=IWDG
+Mcu.IP11=LPUART1
+Mcu.IP12=MEMORYMAP
+Mcu.IP13=NETXDUO
+Mcu.IP14=NVIC
+Mcu.IP15=PWR
+Mcu.IP16=RCC
+Mcu.IP17=SPI2
+Mcu.IP18=SYS
+Mcu.IP19=THREADX
 Mcu.IP2=BOOTPATH
+Mcu.IP20=UART7
 Mcu.IP3=CORTEX_M33_NS
-Mcu.IP4=ETH
-Mcu.IP5=FDCAN2
-Mcu.IP6=GPDMA1
-Mcu.IP7=I2C2
-Mcu.IP8=ICACHE
-Mcu.IP9=IWDG
-Mcu.IPNb=20
+Mcu.IP4=DCACHE1
+Mcu.IP5=ETH
+Mcu.IP6=FDCAN2
+Mcu.IP7=GPDMA1
+Mcu.IP8=I2C2
+Mcu.IP9=ICACHE
+Mcu.IPNb=21
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -155,20 +159,21 @@ Mcu.Pin11=PF3
 Mcu.Pin110=PB9
 Mcu.Pin111=PE0
 Mcu.Pin112=VP_CORTEX_M33_NS_VS_Hclk
-Mcu.Pin113=VP_GPDMA1_VS_GPDMACH4
-Mcu.Pin114=VP_GPDMA1_VS_GPDMACH5
-Mcu.Pin115=VP_ICACHE_VS_ICACHE
-Mcu.Pin116=VP_IWDG_VS_IWDG
-Mcu.Pin117=VP_NETXDUO_VS_NXOoCore
-Mcu.Pin118=VP_NETXDUO_VS_NetworkOoInterface
-Mcu.Pin119=VP_NETXDUO_VS_EthernetOoPhyOoInterface
+Mcu.Pin113=VP_DCACHE1_VS_DCACHE
+Mcu.Pin114=VP_GPDMA1_VS_GPDMACH4
+Mcu.Pin115=VP_GPDMA1_VS_GPDMACH5
+Mcu.Pin116=VP_ICACHE_VS_ICACHE
+Mcu.Pin117=VP_IWDG_VS_IWDG
+Mcu.Pin118=VP_NETXDUO_VS_NXOoCore
+Mcu.Pin119=VP_NETXDUO_VS_NetworkOoInterface
 Mcu.Pin12=PF4
-Mcu.Pin120=VP_PWR_VS_SECSignals
-Mcu.Pin121=VP_PWR_VS_LPOM
-Mcu.Pin122=VP_SYS_VS_tim1
-Mcu.Pin123=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin124=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin125=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin120=VP_NETXDUO_VS_EthernetOoPhyOoInterface
+Mcu.Pin121=VP_PWR_VS_SECSignals
+Mcu.Pin122=VP_PWR_VS_LPOM
+Mcu.Pin123=VP_SYS_VS_tim1
+Mcu.Pin124=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+Mcu.Pin125=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin126=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
 Mcu.Pin15=PF7
@@ -264,7 +269,7 @@ Mcu.Pin96=PD7
 Mcu.Pin97=PG9
 Mcu.Pin98=PG10
 Mcu.Pin99=PG11
-Mcu.PinsNb=126
+Mcu.PinsNb=127
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -694,91 +699,94 @@ ProjectManager.ToolChainLocation=
 ProjectManager.UAScriptAfterPath=
 ProjectManager.UAScriptBeforePath=
 ProjectManager.UnderRoot=false
-ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPDMA1_Init-GPDMA1-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_IWDG_Init-IWDG-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_ADC2_Init-ADC2-false-HAL-true,9-MX_FDCAN2_Init-FDCAN2-false-HAL-true,10-MX_ETH_Init-ETH-false-HAL-true,11-MX_I2C2_Init-I2C2-false-HAL-true,12-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_UART7_Init-UART7-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
-RCC.ADCFreq_Value=32000000
-RCC.AHBFreq_Value=32000000
-RCC.APB1Freq_Value=32000000
-RCC.APB1TimFreq_Value=32000000
-RCC.APB2Freq_Value=32000000
-RCC.APB2TimFreq_Value=32000000
-RCC.APB3Freq_Value=32000000
+ProjectManager.functionlistsort=1-SystemClock_Config-RCC-false-HAL-false,2-MX_GPDMA1_Init-GPDMA1-false-HAL-true,3-MX_GPIO_Init-GPIO-false-HAL-true,4-MX_ICACHE_Init-ICACHE-false-HAL-true,5-MX_NetXDuo_Init-NETXDUO-false-HAL-false,6-MX_IWDG_Init-IWDG-false-HAL-true,7-MX_ADC1_Init-ADC1-false-HAL-true,8-MX_ADC2_Init-ADC2-false-HAL-true,9-MX_FDCAN2_Init-FDCAN2-false-HAL-true,10-MX_ETH_Init-ETH-false-HAL-true,11-MX_I2C2_Init-I2C2-false-HAL-true,12-MX_LPUART1_UART_Init-LPUART1-false-HAL-true,13-MX_SPI2_Init-SPI2-false-HAL-true,14-MX_UART7_Init-UART7-false-HAL-true,15-MX_DCACHE1_Init-DCACHE1-false-HAL-true,0-MX_CORTEX_M33_NS_Init-CORTEX_M33_NS-false-HAL-true,0-MX_PWR_Init-PWR-false-HAL-true
+RCC.ADCFreq_Value=175000000
+RCC.AHBFreq_Value=175000000
+RCC.APB1Freq_Value=175000000
+RCC.APB1TimFreq_Value=175000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=87500000
+RCC.APB2TimFreq_Value=175000000
+RCC.APB3Freq_Value=175000000
 RCC.CECFreq_Value=32000
 RCC.CKPERFreq_Value=32000000
 RCC.CRSFreq_Value=48000000
 RCC.CSI_VALUE=4000000
-RCC.CortexFreq_Value=32000000
+RCC.CortexFreq_Value=175000000
 RCC.DACFreq_Value=32768
 RCC.EPOD_VALUE=4000000
-RCC.ETHFreq_Value=42666666.666666664
-RCC.FCLKCortexFreq_Value=32000000
-RCC.FDCANClockSelection=RCC_FDCANCLKSOURCE_PLL1Q
-RCC.FDCANFreq_Value=42666666.666666664
+RCC.ETHFreq_Value=175000000
+RCC.FCLKCortexFreq_Value=175000000
+RCC.FDCANFreq_Value=25000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=32000000
+RCC.HCLKFreq_Value=175000000
 RCC.HSE_VALUE=25000000
 RCC.HSI48_VALUE=48000000
 RCC.HSI_VALUE=64000000
-RCC.I2C1Freq_Value=32000000
-RCC.I2C2Freq_Value=32000000
-RCC.I2C3Freq_Value=32000000
-RCC.I2C4Freq_Value=32000000
-RCC.I3C1Freq_Value=32000000
-RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANClockSelection,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL1Q,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SDMMC2Freq_Value,SPI1Freq_Value,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI5Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
-RCC.LPTIM1Freq_Value=32000000
-RCC.LPTIM2Freq_Value=32000000
-RCC.LPTIM3Freq_Value=32000000
-RCC.LPTIM4Freq_Value=32000000
-RCC.LPTIM5Freq_Value=32000000
-RCC.LPTIM6Freq_Value=32000000
-RCC.LPUART1Freq_Value=32000000
+RCC.I2C1Freq_Value=175000000
+RCC.I2C2Freq_Value=175000000
+RCC.I2C3Freq_Value=175000000
+RCC.I2C4Freq_Value=175000000
+RCC.I3C1Freq_Value=175000000
+RCC.IPParameters=ADCFreq_Value,AHBFreq_Value,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,APB3Freq_Value,CECFreq_Value,CKPERFreq_Value,CRSFreq_Value,CSI_VALUE,CortexFreq_Value,DACFreq_Value,EPOD_VALUE,ETHFreq_Value,FCLKCortexFreq_Value,FDCANFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI48_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2C4Freq_Value,I3C1Freq_Value,LPTIM1Freq_Value,LPTIM2Freq_Value,LPTIM3Freq_Value,LPTIM4Freq_Value,LPTIM5Freq_Value,LPTIM6Freq_Value,LPUART1Freq_Value,LSCOPinFreq_Value,LSIRC_VALUE,MCO1PinFreq_Value,MCO2PinFreq_Value,OCTOSPIMFreq_Value,PLL2FRACN,PLL2N,PLL2PoutputFreq_Value,PLL2QoutputFreq_Value,PLL2RoutputFreq_Value,PLL3PoutputFreq_Value,PLL3QoutputFreq_Value,PLL3RoutputFreq_Value,PLLFRACN,PLLN,PLLPoutputFreq_Value,PLLQoutputFreq_Value,PWRFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMC1Freq_Value,SDMMC2Freq_Value,SPI1Freq_Value,SPI2CLockSelection,SPI2Freq_Value,SPI3Freq_Value,SPI4Freq_Value,SPI5Freq_Value,SPI6Freq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART12Freq_Value,UART4Freq_Value,UART5Freq_Value,UART7Freq_Value,UART8Freq_Value,UART9Freq_Value,UCPD1outputFreq_Value,USART10Freq_Value,USART11Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOInput2Freq_Value,VCOInput3Freq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOPLL2OutputFreq_Value,VCOPLL3OutputFreq_Value
+RCC.LPTIM1Freq_Value=175000000
+RCC.LPTIM2Freq_Value=175000000
+RCC.LPTIM3Freq_Value=175000000
+RCC.LPTIM4Freq_Value=175000000
+RCC.LPTIM5Freq_Value=175000000
+RCC.LPTIM6Freq_Value=175000000
+RCC.LPUART1Freq_Value=175000000
 RCC.LSCOPinFreq_Value=32000
 RCC.LSIRC_VALUE=32000
 RCC.MCO1PinFreq_Value=32000000
-RCC.MCO2PinFreq_Value=32000000
-RCC.OCTOSPIMFreq_Value=32000000
-RCC.PLL1Q=3
-RCC.PLL2PoutputFreq_Value=258000000
-RCC.PLL2QoutputFreq_Value=258000000
-RCC.PLL2RoutputFreq_Value=258000000
+RCC.MCO2PinFreq_Value=175000000
+RCC.OCTOSPIMFreq_Value=175000000
+RCC.PLL2FRACN=0
+RCC.PLL2N=32
+RCC.PLL2PoutputFreq_Value=64000000
+RCC.PLL2QoutputFreq_Value=64000000
+RCC.PLL2RoutputFreq_Value=64000000
 RCC.PLL3PoutputFreq_Value=258000000
 RCC.PLL3QoutputFreq_Value=258000000
 RCC.PLL3RoutputFreq_Value=258000000
-RCC.PLLFRACN=0
-RCC.PLLN=32
-RCC.PLLPoutputFreq_Value=64000000
-RCC.PLLQoutputFreq_Value=42666666.666666664
-RCC.PWRFreq_Value=32000000
+RCC.PLLFRACN=4096
+RCC.PLLN=87
+RCC.PLLPoutputFreq_Value=175000000
+RCC.PLLQoutputFreq_Value=175000000
+RCC.PWRFreq_Value=175000000
 RCC.RNGFreq_Value=48000000
-RCC.SAI1Freq_Value=258000000
-RCC.SAI2Freq_Value=258000000
-RCC.SDMMC1Freq_Value=42666666.666666664
-RCC.SDMMC2Freq_Value=42666666.666666664
-RCC.SPI1Freq_Value=42666666.666666664
-RCC.SPI2Freq_Value=42666666.666666664
-RCC.SPI3Freq_Value=42666666.666666664
-RCC.SPI4Freq_Value=32000000
-RCC.SPI5Freq_Value=32000000
-RCC.SPI6Freq_Value=32000000
-RCC.SYSCLKFreq_VALUE=32000000
-RCC.UART12Freq_Value=32000000
-RCC.UART4Freq_Value=32000000
-RCC.UART5Freq_Value=32000000
-RCC.UART7Freq_Value=32000000
-RCC.UART8Freq_Value=32000000
-RCC.UART9Freq_Value=32000000
+RCC.SAI1Freq_Value=64000000
+RCC.SAI2Freq_Value=64000000
+RCC.SDMMC1Freq_Value=175000000
+RCC.SDMMC2Freq_Value=175000000
+RCC.SPI1Freq_Value=175000000
+RCC.SPI2CLockSelection=RCC_SPI2CLKSOURCE_PLL2P
+RCC.SPI2Freq_Value=64000000
+RCC.SPI3Freq_Value=175000000
+RCC.SPI4Freq_Value=87500000
+RCC.SPI5Freq_Value=175000000
+RCC.SPI6Freq_Value=87500000
+RCC.SYSCLKFreq_VALUE=175000000
+RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
+RCC.UART12Freq_Value=175000000
+RCC.UART4Freq_Value=175000000
+RCC.UART5Freq_Value=175000000
+RCC.UART7Freq_Value=175000000
+RCC.UART8Freq_Value=175000000
+RCC.UART9Freq_Value=175000000
 RCC.UCPD1outputFreq_Value=8000000
-RCC.USART10Freq_Value=32000000
-RCC.USART11Freq_Value=32000000
-RCC.USART1Freq_Value=32000000
-RCC.USART2Freq_Value=32000000
-RCC.USART3Freq_Value=32000000
-RCC.USART6Freq_Value=32000000
+RCC.USART10Freq_Value=175000000
+RCC.USART11Freq_Value=175000000
+RCC.USART1Freq_Value=87500000
+RCC.USART2Freq_Value=175000000
+RCC.USART3Freq_Value=175000000
+RCC.USART6Freq_Value=175000000
 RCC.USBFreq_Value=48000000
 RCC.VCOInput2Freq_Value=4000000
 RCC.VCOInput3Freq_Value=4000000
 RCC.VCOInputFreq_Value=4000000
-RCC.VCOOutputFreq_Value=128000000
-RCC.VCOPLL2OutputFreq_Value=516000000
+RCC.VCOOutputFreq_Value=350000000
+RCC.VCOPLL2OutputFreq_Value=128000000
 RCC.VCOPLL3OutputFreq_Value=516000000
 SH.ADCx_INP0.0=ADC1_INP0,IN0-Single-Ended
 SH.ADCx_INP0.1=ADC2_INP0,IN0-Single-Ended
@@ -815,7 +823,7 @@ SH.GPXTI8.0=GPIO_EXTI8
 SH.GPXTI8.ConfNb=1
 SH.GPXTI9.0=GPIO_EXTI9
 SH.GPXTI9.ConfNb=1
-SPI2.CalculateBaudRate=21.333332 MBits/s
+SPI2.CalculateBaudRate=32.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,DataSize
@@ -830,6 +838,8 @@ VP_BOOTPATH_VS_BOOTPATH.Mode=BP_Activate
 VP_BOOTPATH_VS_BOOTPATH.Signal=BOOTPATH_VS_BOOTPATH
 VP_CORTEX_M33_NS_VS_Hclk.Mode=Hclk_Mode
 VP_CORTEX_M33_NS_VS_Hclk.Signal=CORTEX_M33_NS_VS_Hclk
+VP_DCACHE1_VS_DCACHE.Mode=DCACHE_Activate
+VP_DCACHE1_VS_DCACHE.Signal=DCACHE1_VS_DCACHE
 VP_GPDMA1_VS_GPDMACH4.Mode=SIMPLEREQUEST_GPDMACH4
 VP_GPDMA1_VS_GPDMACH4.Signal=GPDMA1_VS_GPDMACH4
 VP_GPDMA1_VS_GPDMACH5.Mode=SIMPLEREQUEST_GPDMACH5
