--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -1,84 +1,84 @@
 #MicroXplorer Configuration settings - do not modify
-ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_0
-ADC1.Channel-12\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC1.Channel-13\#ChannelRegularConversion=ADC_CHANNEL_3
-ADC1.Channel-14\#ChannelRegularConversion=ADC_CHANNEL_5
-ADC1.Channel-15\#ChannelRegularConversion=ADC_CHANNEL_6
-ADC1.Channel-16\#ChannelRegularConversion=ADC_CHANNEL_9
-ADC1.Channel-17\#ChannelRegularConversion=ADC_CHANNEL_10
-ADC1.Channel-18\#ChannelRegularConversion=ADC_CHANNEL_12
-ADC1.Channel-19\#ChannelRegularConversion=ADC_CHANNEL_13
-ADC1.Channel-20\#ChannelRegularConversion=ADC_CHANNEL_15
-ADC1.Channel-21\#ChannelRegularConversion=ADC_CHANNEL_18
+ADC1.Channel-11\#ChannelRegularConversion=ADC_CHANNEL_3
+ADC1.Channel-22\#ChannelRegularConversion=ADC_CHANNEL_0
+ADC1.Channel-23\#ChannelRegularConversion=ADC_CHANNEL_5
+ADC1.Channel-24\#ChannelRegularConversion=ADC_CHANNEL_9
+ADC1.Channel-25\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC1.Channel-26\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC1.Channel-27\#ChannelRegularConversion=ADC_CHANNEL_13
+ADC1.Channel-28\#ChannelRegularConversion=ADC_CHANNEL_18
+ADC1.Channel-29\#ChannelRegularConversion=ADC_CHANNEL_15
 ADC1.ContinuousConvMode=ENABLE
 ADC1.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
 ADC1.DMAContinuousRequests=ENABLE
 ADC1.EOCSelection=ADC_EOC_SEQ_CONV
-ADC1.IPParameters=Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,OffsetNumber-11\#ChannelRegularConversion,MonitoredBy-11\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ConversionDataManagement,Rank-12\#ChannelRegularConversion,Channel-12\#ChannelRegularConversion,SamplingTime-12\#ChannelRegularConversion,OffsetNumber-12\#ChannelRegularConversion,MonitoredBy-12\#ChannelRegularConversion,Rank-13\#ChannelRegularConversion,Channel-13\#ChannelRegularConversion,SamplingTime-13\#ChannelRegularConversion,OffsetNumber-13\#ChannelRegularConversion,MonitoredBy-13\#ChannelRegularConversion,Rank-14\#ChannelRegularConversion,Channel-14\#ChannelRegularConversion,SamplingTime-14\#ChannelRegularConversion,OffsetNumber-14\#ChannelRegularConversion,MonitoredBy-14\#ChannelRegularConversion,Rank-15\#ChannelRegularConversion,Channel-15\#ChannelRegularConversion,SamplingTime-15\#ChannelRegularConversion,OffsetNumber-15\#ChannelRegularConversion,MonitoredBy-15\#ChannelRegularConversion,Rank-16\#ChannelRegularConversion,Channel-16\#ChannelRegularConversion,SamplingTime-16\#ChannelRegularConversion,OffsetNumber-16\#ChannelRegularConversion,MonitoredBy-16\#ChannelRegularConversion,Rank-17\#ChannelRegularConversion,Channel-17\#ChannelRegularConversion,SamplingTime-17\#ChannelRegularConversion,OffsetNumber-17\#ChannelRegularConversion,MonitoredBy-17\#ChannelRegularConversion,Rank-18\#ChannelRegularConversion,Channel-18\#ChannelRegularConversion,SamplingTime-18\#ChannelRegularConversion,OffsetNumber-18\#ChannelRegularConversion,MonitoredBy-18\#ChannelRegularConversion,Rank-19\#ChannelRegularConversion,Channel-19\#ChannelRegularConversion,SamplingTime-19\#ChannelRegularConversion,OffsetNumber-19\#ChannelRegularConversion,MonitoredBy-19\#ChannelRegularConversion,Rank-20\#ChannelRegularConversion,Channel-20\#ChannelRegularConversion,SamplingTime-20\#ChannelRegularConversion,OffsetNumber-20\#ChannelRegularConversion,MonitoredBy-20\#ChannelRegularConversion,Rank-21\#ChannelRegularConversion,Channel-21\#ChannelRegularConversion,SamplingTime-21\#ChannelRegularConversion,OffsetNumber-21\#ChannelRegularConversion,MonitoredBy-21\#ChannelRegularConversion,NbrOfConversion,master
+ADC1.IPParameters=Rank-11\#ChannelRegularConversion,Channel-11\#ChannelRegularConversion,SamplingTime-11\#ChannelRegularConversion,OffsetNumber-11\#ChannelRegularConversion,MonitoredBy-11\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ConversionDataManagement,NbrOfConversion,master,Rank-22\#ChannelRegularConversion,Channel-22\#ChannelRegularConversion,SamplingTime-22\#ChannelRegularConversion,OffsetNumber-22\#ChannelRegularConversion,MonitoredBy-22\#ChannelRegularConversion,Rank-23\#ChannelRegularConversion,Channel-23\#ChannelRegularConversion,SamplingTime-23\#ChannelRegularConversion,OffsetNumber-23\#ChannelRegularConversion,MonitoredBy-23\#ChannelRegularConversion,Rank-24\#ChannelRegularConversion,Channel-24\#ChannelRegularConversion,SamplingTime-24\#ChannelRegularConversion,OffsetNumber-24\#ChannelRegularConversion,MonitoredBy-24\#ChannelRegularConversion,Rank-25\#ChannelRegularConversion,Channel-25\#ChannelRegularConversion,SamplingTime-25\#ChannelRegularConversion,OffsetNumber-25\#ChannelRegularConversion,MonitoredBy-25\#ChannelRegularConversion,Rank-26\#ChannelRegularConversion,Channel-26\#ChannelRegularConversion,SamplingTime-26\#ChannelRegularConversion,OffsetNumber-26\#ChannelRegularConversion,MonitoredBy-26\#ChannelRegularConversion,Rank-27\#ChannelRegularConversion,Channel-27\#ChannelRegularConversion,SamplingTime-27\#ChannelRegularConversion,OffsetNumber-27\#ChannelRegularConversion,MonitoredBy-27\#ChannelRegularConversion,Rank-28\#ChannelRegularConversion,Channel-28\#ChannelRegularConversion,SamplingTime-28\#ChannelRegularConversion,OffsetNumber-28\#ChannelRegularConversion,MonitoredBy-28\#ChannelRegularConversion,Rank-29\#ChannelRegularConversion,Channel-29\#ChannelRegularConversion,SamplingTime-29\#ChannelRegularConversion,OffsetNumber-29\#ChannelRegularConversion,MonitoredBy-29\#ChannelRegularConversion
 ADC1.MonitoredBy-11\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-12\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-13\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-14\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-15\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-16\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-17\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-18\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-19\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-20\#ChannelRegularConversion=__NULL
-ADC1.MonitoredBy-21\#ChannelRegularConversion=__NULL
-ADC1.NbrOfConversion=11
+ADC1.MonitoredBy-22\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-23\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-24\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-25\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-26\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-27\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-28\#ChannelRegularConversion=__NULL
+ADC1.MonitoredBy-29\#ChannelRegularConversion=__NULL
+ADC1.NbrOfConversion=9
 ADC1.NbrOfConversionFlag=1
 ADC1.OffsetNumber-11\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-12\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-13\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-14\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-15\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-16\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-17\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-18\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-19\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-20\#ChannelRegularConversion=ADC_OFFSET_NONE
-ADC1.OffsetNumber-21\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-22\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-23\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-24\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-25\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-26\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-27\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-28\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC1.OffsetNumber-29\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC1.Rank-11\#ChannelRegularConversion=1
-ADC1.Rank-12\#ChannelRegularConversion=2
-ADC1.Rank-13\#ChannelRegularConversion=3
-ADC1.Rank-14\#ChannelRegularConversion=4
-ADC1.Rank-15\#ChannelRegularConversion=5
-ADC1.Rank-16\#ChannelRegularConversion=6
-ADC1.Rank-17\#ChannelRegularConversion=7
-ADC1.Rank-18\#ChannelRegularConversion=8
-ADC1.Rank-19\#ChannelRegularConversion=9
-ADC1.Rank-20\#ChannelRegularConversion=10
-ADC1.Rank-21\#ChannelRegularConversion=11
+ADC1.Rank-22\#ChannelRegularConversion=2
+ADC1.Rank-23\#ChannelRegularConversion=3
+ADC1.Rank-24\#ChannelRegularConversion=4
+ADC1.Rank-25\#ChannelRegularConversion=5
+ADC1.Rank-26\#ChannelRegularConversion=6
+ADC1.Rank-27\#ChannelRegularConversion=7
+ADC1.Rank-28\#ChannelRegularConversion=8
+ADC1.Rank-29\#ChannelRegularConversion=9
 ADC1.SamplingTime-11\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-12\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-13\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-14\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-15\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-16\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-17\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-18\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-19\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-20\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
-ADC1.SamplingTime-21\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-22\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-23\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-24\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-25\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-26\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-27\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-28\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC1.SamplingTime-29\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC1.master=1
-ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_2
-ADC2.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_6
+ADC2.Channel-2\#ChannelRegularConversion=ADC_CHANNEL_12
+ADC2.Channel-3\#ChannelRegularConversion=ADC_CHANNEL_10
+ADC2.Channel-4\#ChannelRegularConversion=ADC_CHANNEL_2
+ADC2.Channel-5\#ChannelRegularConversion=ADC_CHANNEL_6
 ADC2.ContinuousConvMode=ENABLE
 ADC2.ConversionDataManagement=ADC_CONVERSIONDATA_DMA_CIRCULAR
 ADC2.DMAContinuousRequests=ENABLE
 ADC2.EOCSelection=ADC_EOC_SEQ_CONV
-ADC2.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,MonitoredBy-2\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ConversionDataManagement,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,MonitoredBy-3\#ChannelRegularConversion,NbrOfConversion
+ADC2.IPParameters=Rank-2\#ChannelRegularConversion,Channel-2\#ChannelRegularConversion,SamplingTime-2\#ChannelRegularConversion,OffsetNumber-2\#ChannelRegularConversion,MonitoredBy-2\#ChannelRegularConversion,NbrOfConversionFlag,ContinuousConvMode,DMAContinuousRequests,EOCSelection,ConversionDataManagement,Rank-3\#ChannelRegularConversion,Channel-3\#ChannelRegularConversion,SamplingTime-3\#ChannelRegularConversion,OffsetNumber-3\#ChannelRegularConversion,MonitoredBy-3\#ChannelRegularConversion,NbrOfConversion,Rank-4\#ChannelRegularConversion,Channel-4\#ChannelRegularConversion,SamplingTime-4\#ChannelRegularConversion,OffsetNumber-4\#ChannelRegularConversion,MonitoredBy-4\#ChannelRegularConversion,Rank-5\#ChannelRegularConversion,Channel-5\#ChannelRegularConversion,SamplingTime-5\#ChannelRegularConversion,OffsetNumber-5\#ChannelRegularConversion,MonitoredBy-5\#ChannelRegularConversion
 ADC2.MonitoredBy-2\#ChannelRegularConversion=__NULL
 ADC2.MonitoredBy-3\#ChannelRegularConversion=__NULL
-ADC2.NbrOfConversion=2
+ADC2.MonitoredBy-4\#ChannelRegularConversion=__NULL
+ADC2.MonitoredBy-5\#ChannelRegularConversion=__NULL
+ADC2.NbrOfConversion=4
 ADC2.NbrOfConversionFlag=1
 ADC2.OffsetNumber-2\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.OffsetNumber-3\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-4\#ChannelRegularConversion=ADC_OFFSET_NONE
+ADC2.OffsetNumber-5\#ChannelRegularConversion=ADC_OFFSET_NONE
 ADC2.Rank-2\#ChannelRegularConversion=1
 ADC2.Rank-3\#ChannelRegularConversion=2
+ADC2.Rank-4\#ChannelRegularConversion=3
+ADC2.Rank-5\#ChannelRegularConversion=4
 ADC2.SamplingTime-2\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 ADC2.SamplingTime-3\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC2.SamplingTime-4\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
+ADC2.SamplingTime-5\#ChannelRegularConversion=ADC_SAMPLETIME_2CYCLES_5
 BOOTPATH.BootPathName=LEGACY
 BOOTPATH.IPParameters=BootPathName
 BOOTPATH.UserSelectedBootPath=LEGACY
@@ -783,11 +783,11 @@ RCC.VCOPLL3OutputFreq_Value=516000000
 SH.ADCx_INP0.0=ADC1_INP0,IN0-Single-Ended
 SH.ADCx_INP0.1=ADC2_INP0,IN0-Single-Ended
 SH.ADCx_INP0.ConfNb=2
-SH.ADCx_INP10.0=ADC2_INP10
-SH.ADCx_INP10.1=ADC1_INP10,IN10-Single-Ended
+SH.ADCx_INP10.0=ADC1_INP10
+SH.ADCx_INP10.1=ADC2_INP10,IN10-Single-Ended
 SH.ADCx_INP10.ConfNb=2
-SH.ADCx_INP12.0=ADC2_INP12
-SH.ADCx_INP12.1=ADC1_INP12,IN12-Single-Ended
+SH.ADCx_INP12.0=ADC1_INP12
+SH.ADCx_INP12.1=ADC2_INP12,IN12-Single-Ended
 SH.ADCx_INP12.ConfNb=2
 SH.ADCx_INP13.0=ADC1_INP13,IN13-Single-Ended
 SH.ADCx_INP13.1=ADC2_INP13,IN13-Single-Ended
