--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -131,7 +131,8 @@ Mcu.IP17=SPI2
 Mcu.IP18=SYS
 Mcu.IP19=THREADX
 Mcu.IP2=BOOTPATH
-Mcu.IP20=UART7
+Mcu.IP20=TIM2
+Mcu.IP21=UART7
 Mcu.IP3=CORTEX_M33_NS
 Mcu.IP4=DCACHE1
 Mcu.IP5=ETH
@@ -139,7 +140,7 @@ Mcu.IP6=FDCAN2
 Mcu.IP7=GPDMA1
 Mcu.IP8=I2C2
 Mcu.IP9=ICACHE
-Mcu.IPNb=21
+Mcu.IPNb=22
 Mcu.Name=STM32H563ZITx
 Mcu.Package=LQFP144
 Mcu.Pin0=PE2
@@ -172,8 +173,9 @@ Mcu.Pin121=VP_PWR_VS_SECSignals
 Mcu.Pin122=VP_PWR_VS_LPOM
 Mcu.Pin123=VP_SYS_VS_tim1
 Mcu.Pin124=VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault
-Mcu.Pin125=VP_BOOTPATH_VS_BOOTPATH
-Mcu.Pin126=VP_MEMORYMAP_VS_MEMORYMAP
+Mcu.Pin125=VP_TIM2_VS_ClockSourceINT
+Mcu.Pin126=VP_BOOTPATH_VS_BOOTPATH
+Mcu.Pin127=VP_MEMORYMAP_VS_MEMORYMAP
 Mcu.Pin13=PF5
 Mcu.Pin14=PF6
 Mcu.Pin15=PF7
@@ -269,7 +271,7 @@ Mcu.Pin96=PD7
 Mcu.Pin97=PG9
 Mcu.Pin98=PG10
 Mcu.Pin99=PG11
-Mcu.PinsNb=127
+Mcu.PinsNb=128
 Mcu.ThirdPartyNb=0
 Mcu.UserConstants=
 Mcu.UserName=STM32H563ZITx
@@ -834,6 +836,8 @@ THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_TIMER_TICKS_PE
 THREADX.TX_APP_CREATION=1
 THREADX.TX_APP_GENERATE_INIT_CODE=false
 THREADX.TX_TIMER_TICKS_PER_SECOND=1000
+TIM2.IPParameters=Prescaler
+TIM2.Prescaler=174
 VP_BOOTPATH_VS_BOOTPATH.Mode=BP_Activate
 VP_BOOTPATH_VS_BOOTPATH.Signal=BOOTPATH_VS_BOOTPATH
 VP_CORTEX_M33_NS_VS_Hclk.Mode=Hclk_Mode
@@ -864,4 +868,6 @@ VP_SYS_VS_tim1.Mode=TIM1
 VP_SYS_VS_tim1.Signal=SYS_VS_tim1
 VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault.Mode=Core_Default
 VP_THREADX_VS_RTOSJjThreadXJjCoreJjDefault.Signal=THREADX_VS_RTOSJjThreadXJjCoreJjDefault
+VP_TIM2_VS_ClockSourceINT.Mode=Internal
+VP_TIM2_VS_ClockSourceINT.Signal=TIM2_VS_ClockSourceINT
 board=custom
