--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -406,7 +406,6 @@ PB8.Locked=true
 PB9.GPIOParameters=GPIO_Label
 PB9.GPIO_Label=SPI2_NSS
 PB9.Locked=true
-PB9.Mode=NSS_Signal_Hard_Output
 PB9.Signal=SPI2_NSS
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=ADC12_INP10
@@ -837,9 +836,8 @@ SH.GPXTI9.ConfNb=1
 SPI2.CalculateBaudRate=32.0 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
-SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,VirtualNSS,DataSize
+SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize
 SPI2.Mode=SPI_MODE_MASTER
-SPI2.VirtualNSS=VM_NSSHARD
 SPI2.VirtualType=VM_MASTER
 THREADX.IPParameters=TX_APP_GENERATE_INIT_CODE,TX_APP_CREATION,TX_TIMER_TICKS_PER_SECOND
 THREADX.TX_APP_CREATION=1
