--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -404,9 +404,9 @@ PB6.Signal=FDCAN2_TX
 PB7.Locked=true
 PB8.Locked=true
 PB9.GPIOParameters=GPIO_Label
-PB9.GPIO_Label=SPI2_NSS
+PB9.GPIO_Label=IMU_CS
 PB9.Locked=true
-PB9.Signal=SPI2_NSS
+PB9.Signal=GPIO_Output
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=ADC12_INP10
 PC0.Locked=true
