--- a/Cerberus-2.0.ioc
+++ b/Cerberus-2.0.ioc
@@ -403,9 +403,10 @@ PB6.Mode=FDCAN_Activate
 PB6.Signal=FDCAN2_TX
 PB7.Locked=true
 PB8.Locked=true
-PB9.GPIOParameters=GPIO_Label
+PB9.GPIOParameters=PinState,GPIO_Label
 PB9.GPIO_Label=IMU_CS
 PB9.Locked=true
+PB9.PinState=GPIO_PIN_SET
 PB9.Signal=GPIO_Output
 PC0.GPIOParameters=GPIO_Label
 PC0.GPIO_Label=ADC12_INP10
